# insta-fun

./: .gitignore  ACKNOWLEDGEMENTS.md  Cargo.toml  README.md
.gh-pages/: _config.yml  filters.md  filters_advanced.md  index.md  modulation_and_control.md  oscillators.md  oscillators_advanced.md  time_fx_and_noise.md  utility_shaping_rate.md
.gh-pages/_layouts/: no_sidebar.html
.gh-pages/assets/css/: style.scss
.github/workflows/: publish.yml  test.yml
examples/: filters.rs  filters_advanced.rs  modulation_and_control.rs  oscillators.rs  oscillators_advanced.rs  time_fx_and_noise.rs  utility_shaping_rate.rs
examples/snapshots/: filters__filter_highshelf_2k_q0_707_gain1_5@audio.snap  filters__filter_pinkpass_white.snap  filters_advanced__adv_fb_highpass_1000hz_q0_70_shape0_50.snap  filters_advanced__adv_fb_resonator_1000hz_q6_00_shape0_80@audio.snap  modulation_and_control__mod_adsr_a10ms_d100ms_s0_70_r200ms.snap  modulation_and_control__mod_lfo@audio.snap  oscillators__osc_organ_440hz.snap  oscillators__osc_sine_440hz.snap  oscillators_advanced__adv_dsf_square_440hz_rough1_00.snap  oscillators_advanced__osc_pluck_110hz_damp0_50@audio.snap  time_fx_and_noise__noise_brown.snap  time_fx_and_noise__noise_pink.snap  utility_shaping_rate__util_map_abs_sine110.snap  utility_shaping_rate__util_map_abs_sine110@audio.snap
scripts/: run_all.sh  verify_gallery.py
src/: abnormal.rs  chart.rs  chart_data.rs  config.rs  graph.rs  input.rs  lib.rs  macros.rs  snapshot.rs  tests.rs  util.rs  warmup.rs  wav.rs
src/snapshots/: doctest_macros_rs__doc_lowpass.snap  insta_fun__chart__tests__chart_grid_no_labels.snap  insta_fun__filter_sine.svg.snap  insta_fun__lowpass_impulse.svg.snap  insta_fun__net.svg.snap  insta_fun__process_64.svg.snap  insta_fun__short_sine.snap  insta_fun__sine_hz_3.svg.snap  insta_fun__stereo.svg.snap  insta_fun__tests__chart_with_title.snap  insta_fun__tests__complex_net_graph.snap  insta_fun__tests__complex_net_graph.snap.dot  insta_fun__tests__lowpass_impulse.snap  insta_fun__tests__macro_variant_unit_only.snap  insta_fun__tests__macro_variant_unit_only@audio.snap  insta_fun__tests__macro_with_name.snap  insta_fun__tests__multi_channel_vec_by_channel_with_inputs.snap  insta_fun__tests__net_graph.snap.dot  insta_fun__tests__process_64.snap  insta_fun__tests__warmup_samples.snap  insta_fun__tests__warmup_seconds.snap  insta_fun__tests__wav16.snap
