[package]
name = "insta-fun"
version = "2.0.1"
edition = "2024"
description = "Snapshot testing of fundsp units. Visualize output in svg and compare using insta"
repository = "https://github.com/anvlkv/insta-fun"
license = "Unlicense"
keywords = ["fundsp", "insta", "plotters", "testing", "visualization"]

[[example]]
name = "filters"

[[example]]
name = "oscillators"

[[example]]
name = "time_fx_and_noise"

[[example]]
name = "filters_advanced"

[[example]]
name = "oscillators_advanced"

[dependencies]
derive_builder = "0.20.2"
fundsp = { version = "0.20", default-features = false, features = ["std"] }
plotters = { version = "0.3.7", default-features = false, features = [
  "line_series",
  "point_series",
  "svg_backend"
] }

[dev-dependencies]
insta = "1.44"
