[package]
name = "insta-fun"
version = "2.2.0"
edition = "2024"
description = "Snapshot testing of fundsp units. Visualize output in svg and compare using insta"
repository = "https://github.com/anvlkv/insta-fun"
license = "Unlicense"
keywords = ["fundsp", "insta", "plotters", "testing", "visualization"]

[[example]]
name = "filters"

[[example]]
name = "oscillators"

[[example]]
name = "time_fx_and_noise"

[[example]]
name = "filters_advanced"

[[example]]
name = "oscillators_advanced"

[[example]]
name = "modulation_and_control"

[[example]]
name = "utility_shaping_rate"

[dependencies]
derive_builder = "0.20.2"
fundsp = { version = "0.21", default-features = false, features = ["std"] }
petgraph = { version = "0.8.3", optional = true }
plotters = { version = "0.3.7", default-features = false, features = [
  "line_series",
  "point_series",
  "svg_backend"
] }

[dev-dependencies]
insta = "1.46"

[features]
default = []
dot = ["dep:petgraph"]
